# tacotron_qdou

./: .gitignore  .gitmodules  README.md  TRAINING_DATA.md  alignment_synthesizer.py  demo_server.py  environment.yml  eval.py  eval_pml.py  hparams.py  pml_synthesizer.py  preprocess.py  read_pml.py  requirements.txt  synthesize.py  test_alignment_synthesizer.py  test_pml_synthesizer.py  test_wavenet_feeder.py  train.py  train_online.py  train_pml.py  wavenet_preprocess.py
datasets/: __init__.py  blizzard.py  datafeeder.py  datafeeder_pml.py  ljspeech.py  nick.py  wavenet_preprocessor.py
lib/merlin/: README.md  generate_pp.py  label_normalisation.py  questions.hed
lib/pulsemodel/: __init__.py  analysis.py  synthesis.py
lib/pulsemodel/sigproc/: Makefile  __init__.py  (+7 more)
lib/sigproc/: README.md  fileio.py  freqwarp.py  interfaces.py  misc.py  sigproc_wavstats.py
lib/straight/: .gitignore  Makefile.am  Makefile.in  configure  configure.ac
lib/straight/analysis/: configure.in  straight_body_c03.cpp  straight_mcep  voice_strength.cpp  voice_strength.h
lib/straight/analysis/autom4te.cache/: output.1  traces.1
lib/straight/autom4te.cache/: output.0  requests  traces.0  traces.1
lib/straight/pystraight/: aper2bndap.py  straight.py
lib/straight/sp/: basic.cpp  basic.h  complex.cpp  config.status  configure  filter.cpp  filter.h  matrix.h  memory.cpp  option.cpp  straight_body_sub.h  straight_sub.cpp  straight_synth_sub.h  straight_vconv_sub.cpp  straight_vconv_sub.h  vector.cpp  vector.h  voperate.cpp  voperate.h  window.cpp  window.h
lib/straight/synthesis/: Makefile.am  main.cpp  straight_synth_tb06.cpp  straight_synth_tb06_unit_org.cpp
lib/straight/tempo/: Makefile.am  Makefile.in  configure.in  tempo
models/: __init__.py  attention.py  tacotron.py  tacotron_mel_pml.py  tacotron_pml.py  tacotron_pml_locsens.py  tacotron_pml_postnet.py  tacotron_pml_x.py  tacotron_pml_x_locsens.py
notebooks/: AnalysisSynthesis.ipynb  ErrorCorrection.ipynb  HigherDimensional.ipynb  InvTrajectories.ipynb  LocSensAttention.ipynb  PMLEvaluationMetric.ipynb  TacotronAlignment.ipynb
notebooks/.ipynb_checkpoints/: AnalysisSynthesis-checkpoint.ipynb  ErrorCorrection-checkpoint.ipynb  EvalSentences-checkpoint.txt  GranularTacotron-checkpoint.ipynb  HigherDimensional-checkpoint.ipynb  InvTrajectories-checkpoint.ipynb  LocSensAttention-checkpoint.ipynb  LossCurves-checkpoint.ipynb  NeuralVocoder-checkpoint.ipynb  TacotronAlignment-checkpoint.ipynb
pulsemodel/: synthesis.py
pulsemodel/sigproc/: __init__.py  env.py  fileio.py  freqwarp.py  interfaces.py  misc.py  resampling.py  setup.py  sigproc.py
scripts/: check_alignment_etc.ipynb  check_move_data.py  create_log_dir.py  move_log_dir.py  remove_source_data.py  remove_training_data.py  spec2wav.py  spec2wav.sh
scripts/run/: gen_onesixthree_locsens_pml_x_lj.sh  lj_restart_tacotron.sh  lj_tacotron.sh  locsens_mel_x_lj.sh  locsens_pml_lj.sh  locsens_pml_x_lj.sh  locsens_restart_pml_x_lj.sh  lstm_simplified_pml_lj.sh  mel_pml_lj_restart_tacotron.sh  mel_pml_lj_tacotron.sh  onesixthree_locsens_pml_x_lj.sh  onesixthree_restart_locsens_pml_x_lj.sh  pml_tacotron.sh  pml_tacotron_lj.sh  pml_tacotron_lj_checkpoint.sh  pml_tacotron_nick.sh  postnet_pml_lj.sh  preprocess.sh  restart_pml_tacotron_lj.sh  resume_postnet_pml_lj.sh  schedsamp_onesixthree_restart_locsens_pml_x_lj.sh  schedsamp_simp_locsens_pml_x_lj.sh  short_lstm_pml_lj.sh  simplified_pml_lj.sh  simplified_restart_pml_lj.sh  tacotron.sh  tacotron.sh.e5146372  tacotron.sh.o5146372  tacotron_pml_x_lj.sh  tacotron_restart_pml_x_lj.sh
sigproc/: __init__.py  fileio.py  interfaces.py  resampling.py  sigproc.py
sigproc/cython/: sinusoidal.pyx
sigproc/pystraight/: straight.py
sigproc/scripts/: spec2bndfwspec.py  spec2spec.py
straight/: COPYING  config.status
straight/analysis/: Makefile.am  Makefile.in  config.status  configure  main.cpp  main_ap.cpp  straight_bndap  straight_body_c03.h
straight/analysis/autom4te.cache/: requests  traces.0
straight/pystraight/: __init__.py  bndap2aper.py  straight.py
straight/sp/: Makefile.am  Makefile.in  complex.h  configure.in  defs.h  fft.cpp  fft.h  fileio.cpp  fileio.h  kaiser.cpp  kaiser.h  matrix.cpp  memory.h  option.h  straight_body_sub.cpp  straight_sub.h  straight_synth_sub.cpp  tempo_sub.cpp  tempo_sub.h
straight/synthesis/: Makefile.in  configure  configure.in  straight_synth_tb06.h  synthesis_fft
straight/tempo/: config.status  configure  main.cpp  tempo.cpp  tempo.h
tacotron/: alignment_synthesizer.py  datafeeder.py  eval.py  eval_pml.py  pml_synthesizer.py  synthesize.py  synthesizer.py  train.py  train_online.py
tacotron/models/: __init__.py  attention.py  base_tacotron.py  helpers.py  lockable_attention_wrapper.py  modules.py  rnn_wrappers.py  tacotron.py
tacotron/utils/: accent_error_models.py  cmudict_p27.py  dicts.py  log_gradients.py  plot.py  symbols.py  text.py
tests/: cmudict_test.py  numbers_test.py  text_test.py
util/: audio.py  rename.py  test_audio.py
wavenet_vocoder/: feeder.py  synthesize.py  synthesizer.py  train.py
wavenet_vocoder/models/: wavenet.py
(+28 files in other folders)
