bin_PROGRAMS=straight_mcep straight_bndap
straight_mcep_SOURCES=main.cpp straight_body_c03.cpp straight_body_c03.h
straight_bndap_SOURCES=main_ap.cpp straight_body_c03.cpp straight_body_c03.h
straight_mcep_CXXFLAGS=-I../sp
straight_mcep_LDADD=-L../sp -lsp
straight_bndap_CXXFLAGS=-I../sp
straight_bndap_LDADD=-L../sp -lsp
